# Soften-Phone

./: .gitignore  CMakeLists.txt  README.md  app.rc
assets/: assets.qrc
docs/: RELEASE-1.1.0.md  RELEASE-1.2.0.md  RELEASE-1.2.1.md  SPEC-SoftenPhone-atual.md  build-pjsip.md
packaging/: setup.iss
src/: main.cpp
src/audio/: ringtone.cpp  ringtone.h  tones.cpp  tones.h
src/core/: brand.cpp  brand.h  diag.cpp  diag.h  paths.h  selfprotect.cpp  selfprotect.h  updater.cpp  updater.h  version.h
src/data/: callaudit.h  callhistory.cpp  callhistory.h  discordaudit.cpp  discordaudit.h  exitaudit.cpp  exitaudit.h  secret.example.h  sipconfig.cpp  sipconfig.h
src/sip/: pjengine.cpp  pjengine.h  sipmanager.cpp  sipmanager.h
src/ui/: controls.cpp  controls.h  mainwindow.cpp  mainwindow.h  panels.cpp  panels.h  promptdialog.cpp  promptdialog.h  recentsmodel.cpp  recentsmodel.h  settingsform.cpp  settingsform.h  signalwidgets.cpp  signalwidgets.h  updateform.cpp  updateform.h
tools/: bootstrap-build-machine.ps1  build-pjsip-md.ps1  build.ps1  publish-release.ps1  publish.ps1  release-build.ps1
